サイト設定の日本語化とコンテンツ更新

--- a/content/news/2021-11-08-ivrc2021.md
+++ b/content/news/2021-11-08-ivrc2021.md
@@ -1,6 +1,10 @@
 ---
 title: "IVRC2021 発表作品キャッチ動画公開"
 date: 2021-11-08
+showAuthor: false
+authors:
+  - "yasuhiroinoue"
+showAuthorsBadges: false
 ---
 
 ​根本悠樹君が日本バーチャルリアリティ学会主催IVRC2021 Leap stageで発表した作品のキャッチ動画を公開しました。
