--- a/content/news/2022-11-05-science-agora-2022.md
+++ b/content/news/2022-11-05-science-agora-2022.md
@@ -1,6 +1,10 @@
 ---
 title: "サイエンスアゴラ2022に出展します"
 date: 2022-11-05
+showAuthor: false
+authors:
+  - "yasuhiroinoue"
+showAuthorsBadges: false
 ---
 
 学術変革領域研究（A）「からだ工務店」で出展します（東京・お台場・テレコムセンター5階 ブース517）。当研究室からは、折り畳み・展開シミュレーションの体験デモを展示します。
