--- a/content/news/2023-09-24-academic-day-2023.md
+++ b/content/news/2023-09-24-academic-day-2023.md
@@ -1,6 +1,10 @@
 ---
 title: "京都大学アカデミックデイ2023に出展"
 date: 2023-09-24
+showAuthor: false
+authors:
+  - "yasuhiroinoue"
+showAuthorsBadges: false
 ---
 
 京都大学アカデミックデイ2023に出展します
