--- a/content/news/2024-11-12-nov-fest.md
+++ b/content/news/2024-11-12-nov-fest.md
@@ -1,6 +1,10 @@
 ---
 title: "根本悠樹君と松本嘉彦君が京都大学１１月祭に出展"
 date: 2024-11-12
+showAuthor: false
+authors:
+  - "yasuhiroinoue"
+showAuthorsBadges: false
 ---
 
 京都大学１１月祭に根本悠樹君がチーム有明で出展します。松本 嘉彦君が京大機械研究会で出展します。
